<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>python_waypoints</name>
  <version>0.0.0</version>
  <description>Ros2 Nav2 Waypoints Following with easy data file</description>
  <maintainer email="russh@perfectsecurity.us">russ</maintainer>
  <license>MIT</license>

  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_simple_commander</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
